--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -31,9 +31,9 @@ pipeline{
             }
         }
         stage("quality gate"){
-           steps {
+            steps{
                 script {
-                    waitForQualityGate abortPipeline: false, credentialsId: 'Sonar-token'
+                    waitForQualityGate abortPipeline: false, credentialsId: 'sonar-token'
                 }
             }
         }
